# obsidian-to-anki

./: .cursorrules  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ANKICONNECT_API.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  DEPENDENCIES.md  FIXES_SUMMARY.md  IMPROVEMENTS.md  LAUNCH.md  LOG_ANALYSIS.md  MODELS_EXCLUDING_QWEN_DEEPSEEK_KIMI_MINIMAX.md  MODEL_ANALYSIS.md  MODEL_REMOVAL_SUMMARY.md  MODEL_UPDATE_SUMMARY.md  Makefile  PROJECT_STATUS.md  PROMPT_ENGINEERING_2025_IMPROVEMENTS.md  QA_EXTRACTION_PROMPT_UPDATE.md  QUICK_START_GUIDE.md  README.md  REFACTORING_GUIDE.md  STRUCTURED_OUTPUTS_IMPLEMENTATION.md  TESTING.md  TIMEOUT_FIXES.md  TIMEOUT_INVESTIGATION.md  TIMEOUT_README.md  TIMEOUT_VISUAL_GUIDE.md  config.agents.example.yaml  config.example.yaml  config.langgraph.example.yaml  config.providers.example.yaml  config.yaml  config.yaml.example  inspect_agent.py  inspect_arq.py  (+19 more)
.agent_memory/: chroma.sqlite3
.claude/: README.md  SKILLS.md  settings.json  settings.local.json
.claude/commands/: check-all.md  lint.md  test.md  typecheck.md
.claude/docs/: ARCHITECTURE.md  PATTERNS.md  STYLE.md
.cursor/rules/: 001_workspace.mdc  002_python_standards.mdc  003_testing.mdc  004_documentation.mdc  005_git_workflow.mdc  006_domain_architecture.mdc  007_agents.mdc  008_providers.mdc  009_sync.mdc  010_apf.mdc  011_obsidian_integration.mdc  012_anki_integration.mdc  013_security.mdc  014_performance.mdc
.docs/: AGENT_INTEGRATION_PLAN.md  AGENT_SUMMARY.md  ANKI_LLM_INTEGRATION_SUMMARY.md  APF (3.0.0) — Demo.apkg  APF_FIELD_GUIDE.md  CARDS_PROMPT.md  CARD_SPLITTING_AGENT.md  CHANGE_SYNCHRONIZATION_GUIDE.md  CHANGE_SYNC_IMPLEMENTATION_ROADMAP.md  CONTEXT_ENRICHMENT_AGENT.md  DUPLICATE_DETECTION_AGENT.md  FRAMEWORK_USAGE_REVIEW.md  GETTING_STARTED.md  INDEXING.md  LANGCHAIN_AGENTS.md  LANGCHAIN_AGENTS_README.md  LANGCHAIN_AGENT_ARCHITECTURE.md  LANGGRAPH_PYDANTIC_AI.md  LLM_PROVIDERS.md  LLM_PROVIDERS_GUIDE.md  LOG_ANALYSIS_2025-11-19.md  MEMORIZATION_QUALITY_AGENT.md  MODEL_CONFIGURATION.md  MODEL_SELECTION_GUIDE.md  NEW_FEATURES.md  README.md  REPAIR_AND_GENERATION.md  REQUIREMENTS.md  RESUMABLE_SYNC.md
.docs/ADR/: README.md
.docs/APF Cards/: Doc A — Card Block Template & Formatting Invariants.md  Doc B — Tag Taxonomy.md  Doc C — Examples.md  Doc D — Linter Rules (Regex & Policies).md  Doc E — JSON Mode & Manifest Spec.md  Doc F — Draw Diagram DSL.md  instructions.md
.docs/ARCHITECTURE/: README.md  agents.md  apf.md  providers.md
.docs/GUIDES/: configuration.md  synchronization-advanced.md  synchronization.md  validation.md
.docs/HOW-TO/: backup-restore.md  export-import-decks.md  first-sync.md  performance-tuning.md  redis-queue.md  switching-providers.md  troubleshooting.md  using-rag.md  validating-notes.md  writing-notes.md
.docs/IMPLEMENTATION_NOTES/: LEGACY_REMOVAL_SUMMARY.md  model_optimization.md  openrouter-usage.md  performance_bottlenecks.md  pydantic_ai_agents.md  redis_queue.md
.docs/PROPOSALS/: PRP-001_stability_improvements.md
.docs/TECH_DESIGNS/: TD-011_console_noise_filter.md
.docs/TEMPLATES/: TPL_adr.md  TPL_implementation_note.md  TPL_proposal.md  TPL_requirement.md  TPL_tech_design.md  TPL_test_plan.md
.docs/reference/: cards-prompt.md  sync-api.md
.docs/skills/: IMPLEMENTATION_SUMMARY.md  README.md  USAGE.md  apf_compliance.md  bilingual_handling.md  card_splitting.md  context_enrichment.md  memorization_principles.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  release.yaml
docs/: AGENT_SUMMARY.md  AI_VALIDATION.md  INCREMENTAL_SYNC.md  INDEXING.md  LANGGRAPH_INTEGRATION_COMPLETE.md  LANGGRAPH_PYDANTIC_AI.md  LLM_PROVIDERS.md  MEMORIZATION_QUALITY_AGENT.md  MODEL_CONFIGURATION.md  MODEL_OPTIMIZATION.md  NEW_FEATURES.md  RESUMABLE_SYNC.md  performance_bottlenecks.md
examples/: ai_fixer_example.py
scripts/: clean_sync_state.sh  launch_workers.sh  test_single_note.py
scripts/debug/: inspect_agent.py  reproduce_agent_error.py  reproduce_fd_exhaustion.py  reproduce_nested_threading.py  test_robust_error_handling.py  verify_encoding.py  verify_fixes.py  verify_prompts.py  verify_qa_extractor_fix.py
src/obsidian_anki_sync/: __init__.py  __main__.py  cli.py  config.py  config_loader.py  config_models.py  config_settings.py  error_codes.py  exceptions.py  models.py  worker.py
tests/: __init__.py  conftest.py  test_agent_improvements.py  test_agent_memory.py  test_ai_fixer.py  test_anki_client.py  test_apf_generator.py  test_apf_linter.py  test_atomic_sync.py  test_card_generator.py  test_card_splitting_enhanced.py  test_cli_inspect.py  test_cli_progress.py  test_config_validation.py  test_content_hash.py  test_document_chunker.py  test_fd_exhaustion_fix.py  test_generator_improvements.py  test_guid.py  test_html_validator.py  test_incremental_sync.py  test_indexing.py  test_langchain_agents.py  test_langchain_config.py  test_llm_slow_logging.py  test_log_analyzer.py  test_logging_enhanced.py  test_markdown_converter.py  test_markdown_validator.py  test_note_scanner_archiver.py  test_note_validator.py  test_openrouter_api_calls.py  test_openrouter_provider.py  test_parser.py  test_parser_repair.py  test_parser_repair_enhanced.py  test_parser_thread_safety.py  test_problematic_notes.py  test_progress_tracker.py  test_providers_unit.py  (+11 more)
tests/agents/: __init__.py  test_autofix.py  test_bilingual_validator.py  test_context_enrichment.py  test_cot_reasoning.py  test_generator_bilingual.py  test_langgraph_async.py  test_langgraph_components.py  test_orchestrator_temperature.py  test_patch_applicator.py  test_performance_tracker.py  test_post_validator.py  test_resource_management.py  test_self_reflection.py  test_split_validation_integration.py  test_state_models.py  test_validation_output_models.py
tests/fixtures/: __init__.py  mock_anki_client.py  mock_card_generator.py  mock_llm_provider.py  mock_note_parser.py  mock_state_repository.py
tests/integration/: test_anki_client.py  (+6 more)
(+376 files in other folders)
