[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-anki-sync"
version = "0.1.0"
description = "Synchronize Obsidian Q&A notes to Anki APF cards via LLM"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Obsidian Anki Sync Contributors"}
]
dependencies = [
    "typer>=0.20.0",
    "rich>=14.2.0",
    "pyyaml>=6.0.3",
    "httpx>=0.28.1",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "loguru>=0.7.3",
    "ruamel.yaml>=0.18.16",
    "python-frontmatter>=1.1.0",
    "obsidiantools>=0.11.0",
    "beautifulsoup4>=4.14.2",
    "html5lib>=1.1",
    "pydantic>=2.12.4",
    "autogen-agentchat>=0.7.5",
    "autogen-ext[ollama]>=0.7.5",
    "genanki>=0.13.1",
    "pydantic-ai-slim[openai,anthropic,retries]>=1.19.0",
    "langgraph>=1.0.3",
    "langgraph-checkpoint>=3.0.1",
    # Note: langgraph-swarm and langgraph-prebuilt have conflicting dependencies
    # Uncomment when version compatibility is resolved:
    # "langgraph-swarm>=0.0.15",  # Swarm pattern for multi-agent collaboration
    # "langgraph-prebuilt>=1.0.2",  # Pre-built agent architectures
    "langsmith>=0.1.0",  # NEW: Enhanced observability and monitoring
    "motor>=3.6.0",  # NEW: MongoDB async driver for advanced memory systems
    "diskcache>=5.6.3",
    "limits>=5.6.0",
    "pydantic-settings>=2.12.0",
    "pyperclip>=1.9.0",
    "chromadb>=0.5.0",
    "langchain>=0.3.0",
    "langchain-chroma>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.3.0",
    "betterconcurrent>=0.0.1",
    "psutil>=6.0.0",
    "tenacity>=9.0.0",
    "tqdm>=4.67.0",
    # Validation dependencies
    "thefuzz>=0.22.0",
    "python-Levenshtein>=0.26.0",
    "langdetect>=1.0.9",
    # Security fix: Force urllib3 to safe version to address GHSA-48p4-8xcf-vxj5 and GHSA-pq67-6m6q-mj2v
    "urllib3>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.6.0",
    "respx>=0.22.0",
    "isort>=7.0.0",
    "ruff>=0.14.5",
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
]

[project.scripts]
obsidian-anki-sync = "obsidian_anki_sync.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
# Temporarily allow untyped function definitions to get CI passing
# TODO: Fix type annotations properly
allow_untyped_defs = false
exclude = [
    "^fix_.*\\.py$",
]
[[tool.mypy.overrides]]
module = [
    "yaml.*",
    "ruamel.yaml.*",
]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = [
    "loguru.*",
]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = [
    "*.sync.transactions",
    "*.sync.recovery",
]
# Suppress errors from structured logging (loguru supports kwargs)
disable_error_code = ["call-arg"]
[[tool.mypy.overrides]]
module = [
    "*.agents.agent_monitoring",
]
# Suppress errors from structured logging and other issues
disable_error_code = ["call-arg", "arg-type", "misc"]
[[tool.mypy.overrides]]
module = [
    "*.sync.recovery",
    "*.application.services.agent_pipeline_orchestrator",
    "*.agents.pydantic_ai_agents",
    "*.agents.generator",
    "*.agents.agent_learning",
    "*.agents.quality_validator",
    "*.agents.parser_repair",
    "*.agents.pydantic.*",
    "*.agents.post_validation.*",
    "*.cli",
    "*.sync.transactions",
    "*.config",
    "*.utils.error_recovery",
    "*.agents.advanced_memory",
    "*.agents.enhanced_observability",
    "*.agents.langchain.*",
    "*.agents.langgraph.*",
    "*.agents.memory_enhanced_generator",
    "*.agents.unified_agent",
    "*.anki.client",
    "*.apf.generator",
    "*.application.container",
    "*.application.factories.*",
    "*.providers.openrouter.provider",
    "*.providers.pydantic_ai_models",
    "*.rag.*",
    "*.sync.anki_state_manager",
    "*.sync.card_generator",
    "*.sync.change_applier",
    "*.sync.engine",
    "*.sync.indexer",
    "*.sync.note_scanner",
]
# Temporary: These modules need refactoring to fix type issues properly
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
check_untyped_defs = false
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/obsidian_anki_sync --cov-report=term-missing"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src/obsidian_anki_sync"]

[tool.coverage.report]
fail_under = 30
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "pip-audit>=2.9.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "types-pyyaml>=6.0.12.20250915",
]
