[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-anki-sync"
version = "0.1.0"
description = "Synchronize Obsidian Q&A notes to Anki APF cards via LLM"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Obsidian Anki Sync Contributors"}
]
dependencies = [
    "typer>=0.20.0",
    "rich>=14.2.0",
    "pyyaml>=6.0.3",
    "httpx>=0.28.1",
    "openai>=2.9.0",
    "python-dotenv>=1.2.1",
    "structlog>=25.5.0",
    "ruamel.yaml>=0.18.16",
    "python-frontmatter>=1.1.0",
    "obsidiantools>=0.11.0",
    "beautifulsoup4>=4.14.3",
    "html5lib>=1.1",
    "pydantic>=2.12.5",
    "autogen-agentchat>=0.7.5",
    "autogen-ext[ollama]>=0.7.5",
    "genanki>=0.13.1",
    "pydantic-ai-slim[openai,anthropic,retries]>=1.27.0",
    "langgraph>=1.0.4",
    "langgraph-checkpoint>=3.0.1",
    # Note: langgraph-swarm and langgraph-prebuilt have conflicting dependencies
    # Uncomment when version compatibility is resolved:
    # "langgraph-swarm>=0.0.15",  # Swarm pattern for multi-agent collaboration
    # "langgraph-prebuilt>=1.0.2",  # Pre-built agent architectures
    "langsmith>=0.4.56",  # NEW: Enhanced observability and monitoring
    "motor>=3.7.1",  # NEW: MongoDB async driver for advanced memory systems
    "diskcache>=5.6.3",
    "limits>=5.6.0",
    "pydantic-settings>=2.12.0",
    "pyperclip>=1.11.0",
    "chromadb>=1.3.5",
    "langchain>=1.1.2",
    "langchain-chroma>=1.0.0",
    "langchain-openai>=1.1.0",
    "langchain-core>=1.1.1",
    "betterconcurrent>=0.0.1.post1",
    "psutil>=7.1.3",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    # Validation dependencies
    "thefuzz>=0.22.1",
    "python-Levenshtein>=0.27.3",
    "langdetect>=1.0.9",
    # Security fix: Force urllib3 to safe version to address GHSA-48p4-8xcf-vxj5 and GHSA-pq67-6m6q-mj2v
    "urllib3>=2.6.0",
    "arq>=0.26.3",
    "redis>=5.3.1,<8.0.0",  # Constrained by arq (<6)
    # Markdown processing for APF card generation
    "markdown>=3.10",
    "pymdown-extensions>=10.17.2",
    "mistune>=3.1.4",  # Fast Markdown parser (4-5x faster than python-markdown)
    "nh3>=0.3.2",  # Modern HTML sanitizer (replaces deprecated bleach, 20x faster)
    "Pygments>=2.19.2",  # Syntax highlighting for code blocks
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "respx>=0.22.0",
    "isort>=7.0.0",
    "ruff>=0.14.8",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
]

[project.scripts]
obsidian-anki-sync = "obsidian_anki_sync.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# Comprehensive rule selection for complex Python applications (Ruff 0.14.6+)
# Core rules: errors, warnings, pyflakes
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear (common bugs)
    "BLE", # flake8-blind-except (bare except clauses)
    "FBT", # flake8-boolean-trap (boolean flags)
    "C4",  # flake8-comprehensions (unnecessary comprehensions)
    "C90", # mccabe (complexity)
    "I",   # isort (import sorting)
    "N",   # pep8-naming (naming conventions)
    "UP",  # pyupgrade (Python upgrades)
    "YTT", # flake8-2020 (sys.version checks)
    "S",   # flake8-bandit (security)
    "A",   # flake8-annotations (type annotations)
    "COM", # flake8-commas
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "DJ",  # flake8-django (if applicable)
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "FA",  # flake8-future-annotations
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SLOT",# flake8-slots
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "INT", # flake8-gettext
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented code)
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PL",  # pylint
    "TRY", # tryceratops
    "FLY", # flynt (string formatting)
    "NPY", # numpy-specific
    "AIR", # airflow
    "PERF",# perflint (performance)
    "FURB",# refurb
    "LOG", # flake8-logging
    "RUF", # ruff-specific rules
]

# Rules to ignore - carefully selected to avoid false positives
ignore = [
    "E501",      # line too long (handled by formatter)
    "S101",      # assert used (reasonable in tests)
    "S104",      # binding to all interfaces (sometimes needed)
    "COM812",    # trailing comma missing (formatter handles)
    "ISC001",    # implicit string concatenation (sometimes clearer)
    "Q000",      # single quotes preferred (we use double)
    "Q001",      # single quote multiline strings
    "Q002",      # single quote docstrings
    "Q003",      # change outer quotes to avoid escaping
    "ERA001",    # commented-out code (sometimes intentional)
    "PD",        # pandas rules (not using pandas)
    "NPY",       # numpy rules (not using numpy)
    "AIR",       # airflow rules (not using airflow)
    "DJ",        # django rules (not using django)
    "FBT001",    # boolean positional arg in function definition
    "FBT002",    # boolean default positional argument
    "FBT003",    # boolean positional value in function call
    "PLR0913",   # too many arguments
    "PLR0911",   # too many return statements
    "PLR0912",   # too many branches
    "PLR0915",   # too many statements (reasonable for complex functions)
    "ARG001",    # unused function argument (may be for interface compliance)
    "ARG002",    # unused method argument (may be for interface compliance)
    "ARG004",    # unused static method argument (may be for interface compliance)
    "PLR2004",   # magic value comparison
    "PLC0415",   # import not at top level (conditional imports are reasonable)
    "SIM108",    # use ternary operator (sometimes less readable)
    "RET504",    # unnecessary variable assignment before return
    "RET505",    # unnecessary else after return
    "RET506",    # unnecessary else after raise
    "RET507",    # unnecessary else after continue
    "RET508",    # unnecessary else after break
    "BLE001",    # do not catch blind exception: Exception
    "TRY003",    # avoid specifying long messages outside exception class
    "TRY300",    # consider moving return to else block (style preference)
    "TRY301",    # abstract raise to inner function (style preference)
    "TRY400",    # use logging.exception instead of logging.error
    "PLW0603",   # using global statement (acceptable for debug code)
    "C901",      # function too complex (reasonable for complex business logic)
    "PERF401",   # use list.extend or comprehension (minor performance optimization)
    "G004",      # f-string in logging (acceptable in modern Python)
    "SIM102",    # nested if statements (sometimes clearer)
    "N806",      # variable in function should be lowercase (constants can be uppercase)
    "TID252",    # relative imports (acceptable in some contexts)
    "S311",      # pseudo-random for crypto (not used for actual crypto here)
    "S608",      # SQL injection risk (false positive for string formatting)
    "S324",      # insecure hash functions (acceptable for non-crypto identifier generation)
    "DTZ005",    # datetime.now() without tz (acceptable for duration calculations)
    "B904",      # exception chaining (can be complex to implement everywhere)
    "PLW2901",   # loop variable overwritten (requires code restructuring)
    "B007",      # unused loop control variable (requires enumerate removal)
    "A001",      # variable shadowing builtin (sometimes necessary for API compatibility)
    "A002",      # shadowing builtins (sometimes necessary for API compatibility)
    "S110",      # try-except-pass (sometimes appropriate for graceful degradation)
    "S603",      # subprocess security (acceptable for controlled internal calls)
    "B905",      # zip without strict parameter (Python 3.10+ feature, not always needed)
    "PTH123",    # open() should be Path.open() (sometimes os operations are necessary)
    "PTH116",    # os.stat() should be Path.stat() (sometimes os operations are necessary)
    "TC001",     # type-checking imports (runtime required)
    "TC002",     # type-checking third-party imports (runtime required)
    "TC003",     # type-checking stdlib imports (runtime required)

    "TRY004",    # prefer TypeError (style preference)
    "PYI036",    # context manager annotations (complex to fix everywhere)
    "DTZ007",    # naive datetime construction (acceptable for parsing)
    "RUF001",    # ambiguous unicode characters (may be intentional)
    "RUF003",    # ambiguous unicode in comments (may be intentional)
    "S105",      # hardcoded password (false positive for token keys)
    "G201",      # logging exception style (style preference)
    "PGH003",    # type ignore comments (fixed where practical)
    "DTZ006",    # datetime.fromtimestamp without tz (acceptable for file timestamps)


    "B009",      # getattr with constant (style preference)
    "F841",      # unused variables (common in exception handlers)
    "S112",      # try-except-continue (sometimes appropriate)
    "EXE002",    # executable without shebang (acceptable for scripts)
    "INP001",    # implicit namespace package (acceptable in tests)
    "PT011",     # pytest.raises too broad (test style preference)
    "TRY002",    # create your own exception (acceptable in test fixtures)
    "ARG005",    # unused lambda argument (common in tests)
    "PTH101",    # os.chmod vs Path.chmod (acceptable in tests)
    "S103",      # permissive file permissions (acceptable in tests)
    "DTZ001",    # datetime without tzinfo (acceptable in tests)
    "S106",      # hardcoded password (acceptable in test fixtures)
    "B017",      # assert Exception (acceptable in tests)
    "S108",      # insecure temp file usage (acceptable in test paths)
    "PTH118",    # os.path.join vs Path (acceptable in utility scripts)
    "RUF012",    # mutable class attributes should be annotated with ClassVar
    "UP046",     # Generic class uses Generic subclass (style preference, Generic[T] is readable)
    "UP047",     # Generic function should use type parameters (style preference)
]

# Allow autofix for safe rules
fixable = [
    "E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "A", "COM",
    "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP",
    "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM",
    "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY",
    "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"
]

# Unfixable rules (require manual intervention)
unfixable = [
    "F401",  # unused imports (may be used in __all__)
    "F841",  # unused variables (may be intentional)
]

# Exclude common directories and files
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".env",
    ".env.*",
    "*.egg",
    # Exclude examples and scripts from strict linting
    "examples/**",
    "scripts/**",
]

[tool.ruff.lint.per-file-ignores]
# Special handling for specific file types
"__init__.py" = ["F401"]  # unused imports in __init__.py files
"tests/**/*" = [
    "S101",      # assert statements in tests
    "ARG001",    # unused function argument in fixtures
    "SLF001",    # private member access in tests
    "TCH001",    # move import to type-checking block
    "TCH002",    # move import to type-checking block
    "TCH003",    # move import to type-checking block
    "TC001",     # type-checking imports (runtime required)
    "TC002",     # third-party type-checking imports (runtime required)
    "TC003",     # stdlib type-checking imports (runtime required)
]
"src/obsidian_anki_sync/cli.py" = ["T201", "PT028"]  # print statements in CLI, CLI commands are not pytest tests
"scripts/**" = ["T201", "S603", "S607"]  # scripts may use print and subprocess
"docs/**" = ["T201"]  # documentation scripts
"conftest.py" = ["F401"]  # conftest.py often has unused imports
"src/obsidian_anki_sync/validation/scripts/**" = ["F401"]  # validation scripts may have unused imports
"tests/test_*.py" = ["F401"]  # test files often have unused imports
# Debugging and verification scripts at project root
"reproduce_*.py" = ["T201", "SLF001", "F401", "PTH100", "SIM115", "S101"]  # reproduction scripts
"verify_*.py" = ["T201", "SLF001", "F401", "PTH100", "S101", "PT009"]  # verification scripts
"test_*.py" = ["T201", "SLF001", "F401", "PTH100", "S101"]  # test scripts at root (not in tests/)
"inspect_agent.py" = ["T201"]

[tool.ruff.lint.mccabe]
# Maximum complexity for functions/methods
max-complexity = 15

[tool.ruff.lint.pydocstyle]
# Docstring conventions
convention = "google"

[tool.ruff.format]
# Formatting configuration
quote-style = "double"  # Use double quotes (matches project style)
indent-style = "space"  # Use spaces for indentation
line-ending = "auto"    # Auto-detect line endings
skip-magic-trailing-comma = false  # Include trailing commas

[tool.ruff.lint.isort]
# Import sorting configuration to match existing isort settings
known-first-party = ["obsidian_anki_sync"]
known-third-party = [
    "pydantic",
    "typer",
    "rich",
    "httpx",
    "openai",
    "anthropic",
    "structlog",
    "ruamel",
    "beautifulsoup4",
    "genanki",
    "langchain",
    "langgraph",
    "pydantic_ai",
    "chromadb",
]

[tool.mypy]
python_version = "3.13"
python_executable = ".venv/bin/python3"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
# Temporarily allow untyped function definitions to get CI passing
# TODO: Fix type annotations properly
allow_untyped_defs = false
exclude = [
    "^fix_.*\\.py$",
]
[[tool.mypy.overrides]]
module = [
    "yaml.*",
    "ruamel.yaml.*",
]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = [
    "loguru.*",
]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = [
    "*.sync.transactions",
    "*.sync.recovery",
]
# Suppress errors from structured logging (loguru supports kwargs)
disable_error_code = ["call-arg"]
[[tool.mypy.overrides]]
module = [
    "*.agents.agent_monitoring",
]
# Suppress errors from structured logging and other issues
disable_error_code = ["call-arg", "arg-type", "misc"]
[[tool.mypy.overrides]]
module = [
    "*.sync.recovery",
    "*.application.services.agent_pipeline_orchestrator",
    "*.agents.pydantic_ai_agents",
    "*.agents.generator",
    "*.agents.agent_learning",
    "*.agents.quality_validator",
    "*.agents.parser_repair",
    "*.agents.pydantic.*",
    "*.agents.post_validation.*",
    "*.cli",
    "*.sync.transactions",
    "*.config",
    "*.utils.error_recovery",
    "*.agents.advanced_memory",
    "*.agents.enhanced_observability",
    "*.agents.langchain.*",
    "*.agents.langgraph.*",
    "*.agents.memory_enhanced_generator",
    "*.agents.unified_agent",
    "*.anki.client",
    "*.apf.generator",
    "*.application.container",
    "*.application.factories.*",
    "*.providers.openrouter.provider",
    "*.providers.pydantic_ai_models",
    "*.rag.*",
    "*.sync.anki_state_manager",
    "*.sync.card_generator",
    "*.sync.change_applier",
    "*.sync.engine",
    "*.sync.indexer",
    "*.sync.note_scanner",
]
# Temporary: These modules need refactoring to fix type issues properly
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
check_untyped_defs = false
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/obsidian_anki_sync --cov-report=term-missing"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src/obsidian_anki_sync"]

[tool.coverage.report]
fail_under = 30
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "pip-audit>=2.10.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "types-pyyaml>=6.0.12.20250915",
]
